--- a/index.html
+++ b/index.html
@@ -21,5 +21,10 @@
         <a href="#">Yes</a>
         <a href="#">No</a>
     </div>
+    <div class="hero-section">
+        <div class="hero-intro">
+            <p>~~~~!!~~~~Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima aliquam ullam nisi ipsam adipisci nulla veritatis odit sint~~~~!!~~~~</p>
+        </div>
+    </div>
 </body>
 </html>
